Теория языков программирования/Расчётное задание/gen/my_cParser.py
# Generated from D:/Git/labs/Теория языков программирования/Расчётное задание\my_c.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class my_cParser ( Parser ):

    grammarFileName = "my_c.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'double'", "'else'", "'if'", 
                     "'int'", "'return'", "'short'", "'struct'", "'('", 
                     "')'", "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", 
                     "'<<'", "'>>'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "';'", "','", "'='", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "Double", "Else", "If", 
                      "Int", "Return", "Short", "Struct", "LeftParen", "RightParen", 
                      "LeftBrace", "RightBrace", "Less", "LessEqual", "Greater", 
                      "GreaterEqual", "LeftShift", "RightShift", "Plus", 
                      "Minus", "Star", "Div", "Mod", "Semi", "Comma", "Assign", 
                      "Dot", "Identifier", "Constant", "Whitespace", "Newline", 
                      "BlockComment", "LineComment" ]

    RULE_run_program = 0
    RULE_program = 1
    RULE_data = 2
    RULE_typeData = 3
    RULE_init = 4
    RULE_main = 5
    RULE_block = 6
    RULE_blockContent = 7
    RULE_blockItem = 8
    RULE_operator = 9
    RULE_assignment = 10
    RULE_condition = 11
    RULE_struct = 12
    RULE_dataStruct = 13
    RULE_conditionalOperates = 14
    RULE_shiftOperates = 15
    RULE_ariphmeticOperates = 16
    RULE_mmdOperates = 17
    RULE_priority_level1 = 18
    RULE_priority_level2 = 19
    RULE_priority_level3 = 20
    RULE_priority_level4 = 21
    RULE_elementaryExpression = 22

    ruleNames =  [ "run_program", "program", "data", "typeData", "init", 
                   "main", "block", "blockContent", "blockItem", "operator", 
                   "assignment", "condition", "struct", "dataStruct", "conditionalOperates", 
                   "shiftOperates", "ariphmeticOperates", "mmdOperates", 
                   "priority_level1", "priority_level2", "priority_level3", 
                   "priority_level4", "elementaryExpression" ]

    EOF = Token.EOF
    T__0=1
    Double=2
    Else=3
    If=4
    Int=5
    Return=6
    Short=7
    Struct=8
    LeftParen=9
    RightParen=10
    LeftBrace=11
    RightBrace=12
    Less=13
    LessEqual=14
    Greater=15
    GreaterEqual=16
    LeftShift=17
    RightShift=18
    Plus=19
    Minus=20
    Star=21
    Div=22
    Mod=23
    Semi=24
    Comma=25
    Assign=26
    Dot=27
    Identifier=28
    Constant=29
    Whitespace=30
    Newline=31
    BlockComment=32
    LineComment=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Run_programContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(my_cParser.ProgramContext,0)


        def EOF(self):
            return self.getToken(my_cParser.EOF, 0)

        def getRuleIndex(self):
            return my_cParser.RULE_run_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRun_program" ):
                listener.enterRun_program(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRun_program" ):
                listener.exitRun_program(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRun_program" ):
                return visitor.visitRun_program(self)
            else:
                return visitor.visitChildren(self)




    def run_program(self):

        localctx = my_cParser.Run_programContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_run_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.program()
            self.state = 47
            self.match(my_cParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_cParser.MainContext)
            else:
                return self.getTypedRuleContext(my_cParser.MainContext,i)


        def data(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_cParser.DataContext)
            else:
                return self.getTypedRuleContext(my_cParser.DataContext,i)


        def struct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_cParser.StructContext)
            else:
                return self.getTypedRuleContext(my_cParser.StructContext,i)


        def getRuleIndex(self):
            return my_cParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = my_cParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << my_cParser.Double) | (1 << my_cParser.Short) | (1 << my_cParser.Struct) | (1 << my_cParser.Identifier))) != 0):
                self.state = 52
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 49
                    self.main()
                    pass

                elif la_ == 2:
                    self.state = 50
                    self.data()
                    pass

                elif la_ == 3:
                    self.state = 51
                    self.struct()
                    pass


                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeData(self):
            return self.getTypedRuleContext(my_cParser.TypeDataContext,0)


        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(my_cParser.Identifier)
            else:
                return self.getToken(my_cParser.Identifier, i)

        def init(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_cParser.InitContext)
            else:
                return self.getTypedRuleContext(my_cParser.InitContext,i)


        def getRuleIndex(self):
            return my_cParser.RULE_data

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData" ):
                listener.enterData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData" ):
                listener.exitData(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData" ):
                return visitor.visitData(self)
            else:
                return visitor.visitChildren(self)




    def data(self):

        localctx = my_cParser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_data)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.typeData()
            self.state = 58
            self.match(my_cParser.Identifier)
            self.state = 59
            self.init()
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==my_cParser.Comma:
                self.state = 60
                self.match(my_cParser.Comma)
                self.state = 61
                self.match(my_cParser.Identifier)
                self.state = 62
                self.init()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(my_cParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeDataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(my_cParser.Identifier, 0)

        def getRuleIndex(self):
            return my_cParser.RULE_typeData

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeData" ):
                listener.enterTypeData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeData" ):
                listener.exitTypeData(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeData" ):
                return visitor.visitTypeData(self)
            else:
                return visitor.visitChildren(self)




    def typeData(self):

        localctx = my_cParser.TypeDataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeData)
        self._la = 0 # Token type
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [my_cParser.Double]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.match(my_cParser.Double)
                pass
            elif token in [my_cParser.Short]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(my_cParser.Short)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==my_cParser.Int:
                    self.state = 72
                    self.match(my_cParser.Int)


                pass
            elif token in [my_cParser.Identifier]:
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self.match(my_cParser.Identifier)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def priority_level1(self):
            return self.getTypedRuleContext(my_cParser.Priority_level1Context,0)


        def getRuleIndex(self):
            return my_cParser.RULE_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit" ):
                listener.enterInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit" ):
                listener.exitInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit" ):
                return visitor.visitInit(self)
            else:
                return visitor.visitChildren(self)




    def init(self):

        localctx = my_cParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==my_cParser.Assign:
                self.state = 78
                self.match(my_cParser.Assign)
                self.state = 79
                self.priority_level1()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeData(self):
            return self.getTypedRuleContext(my_cParser.TypeDataContext,0)


        def block(self):
            return self.getTypedRuleContext(my_cParser.BlockContext,0)


        def getRuleIndex(self):
            return my_cParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = my_cParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.typeData()
            self.state = 83
            self.match(my_cParser.T__0)
            self.state = 84
            self.match(my_cParser.LeftParen)
            self.state = 85
            self.match(my_cParser.RightParen)
            self.state = 86
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_cParser.BlockContentContext)
            else:
                return self.getTypedRuleContext(my_cParser.BlockContentContext,i)


        def getRuleIndex(self):
            return my_cParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = my_cParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(my_cParser.LeftBrace)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << my_cParser.Double) | (1 << my_cParser.If) | (1 << my_cParser.Short) | (1 << my_cParser.Struct) | (1 << my_cParser.LeftBrace) | (1 << my_cParser.Semi) | (1 << my_cParser.Identifier))) != 0):
                self.state = 89
                self.blockContent(0)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self.match(my_cParser.RightBrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockItem(self):
            return self.getTypedRuleContext(my_cParser.BlockItemContext,0)


        def blockContent(self):
            return self.getTypedRuleContext(my_cParser.BlockContentContext,0)


        def getRuleIndex(self):
            return my_cParser.RULE_blockContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockContent" ):
                listener.enterBlockContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockContent" ):
                listener.exitBlockContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockContent" ):
                return visitor.visitBlockContent(self)
            else:
                return visitor.visitChildren(self)



    def blockContent(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = my_cParser.BlockContentContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_blockContent, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.blockItem()
            self._ctx.stop = self._input.LT(-1)
            self.state = 104
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = my_cParser.BlockContentContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_blockContent)
                    self.state = 100
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 101
                    self.blockItem() 
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class BlockItemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data(self):
            return self.getTypedRuleContext(my_cParser.DataContext,0)


        def operator(self):
            return self.getTypedRuleContext(my_cParser.OperatorContext,0)


        def struct(self):
            return self.getTypedRuleContext(my_cParser.StructContext,0)


        def getRuleIndex(self):
            return my_cParser.RULE_blockItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockItem" ):
                listener.enterBlockItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockItem" ):
                listener.exitBlockItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockItem" ):
                return visitor.visitBlockItem(self)
            else:
                return visitor.visitChildren(self)




    def blockItem(self):

        localctx = my_cParser.BlockItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_blockItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 107
                self.data()
                pass

            elif la_ == 2:
                self.state = 108
                self.operator()
                pass

            elif la_ == 3:
                self.state = 109
                self.struct()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(my_cParser.AssignmentContext,0)


        def condition(self):
            return self.getTypedRuleContext(my_cParser.ConditionContext,0)


        def block(self):
            return self.getTypedRuleContext(my_cParser.BlockContext,0)


        def getRuleIndex(self):
            return my_cParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperator" ):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)




    def operator(self):

        localctx = my_cParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_operator)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [my_cParser.Semi]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(my_cParser.Semi)
                pass
            elif token in [my_cParser.Identifier]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.assignment()
                pass
            elif token in [my_cParser.If]:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.condition()
                pass
            elif token in [my_cParser.LeftBrace]:
                self.enterOuterAlt(localctx, 4)
                self.state = 115
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(my_cParser.Identifier)
            else:
                return self.getToken(my_cParser.Identifier, i)

        def priority_level1(self):
            return self.getTypedRuleContext(my_cParser.Priority_level1Context,0)


        def getRuleIndex(self):
            return my_cParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = my_cParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(my_cParser.Identifier)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==my_cParser.Dot:
                self.state = 119
                self.match(my_cParser.Dot)
                self.state = 120
                self.match(my_cParser.Identifier)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(my_cParser.Assign)
            self.state = 127
            self.priority_level1()
            self.state = 128
            self.match(my_cParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def priority_level1(self):
            return self.getTypedRuleContext(my_cParser.Priority_level1Context,0)


        def operator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_cParser.OperatorContext)
            else:
                return self.getTypedRuleContext(my_cParser.OperatorContext,i)


        def getRuleIndex(self):
            return my_cParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = my_cParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(my_cParser.If)
            self.state = 131
            self.match(my_cParser.LeftParen)
            self.state = 132
            self.priority_level1()
            self.state = 133
            self.match(my_cParser.RightParen)
            self.state = 134
            self.operator()
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 135
                self.match(my_cParser.Else)
                self.state = 136
                self.operator()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StructContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(my_cParser.Identifier, 0)

        def dataStruct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_cParser.DataStructContext)
            else:
                return self.getTypedRuleContext(my_cParser.DataStructContext,i)


        def getRuleIndex(self):
            return my_cParser.RULE_struct

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct" ):
                listener.enterStruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct" ):
                listener.exitStruct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct" ):
                return visitor.visitStruct(self)
            else:
                return visitor.visitChildren(self)




    def struct(self):

        localctx = my_cParser.StructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_struct)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(my_cParser.Struct)
            self.state = 140
            self.match(my_cParser.Identifier)
            self.state = 141
            self.match(my_cParser.LeftBrace)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << my_cParser.Double) | (1 << my_cParser.Short) | (1 << my_cParser.Identifier))) != 0):
                self.state = 142
                self.dataStruct()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self.match(my_cParser.RightBrace)
            self.state = 149
            self.match(my_cParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DataStructContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeData(self):
            return self.getTypedRuleContext(my_cParser.TypeDataContext,0)


        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(my_cParser.Identifier)
            else:
                return self.getToken(my_cParser.Identifier, i)

        def getRuleIndex(self):
            return my_cParser.RULE_dataStruct

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataStruct" ):
                listener.enterDataStruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataStruct" ):
                listener.exitDataStruct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataStruct" ):
                return visitor.visitDataStruct(self)
            else:
                return visitor.visitChildren(self)




    def dataStruct(self):

        localctx = my_cParser.DataStructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_dataStruct)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.typeData()
            self.state = 152
            self.match(my_cParser.Identifier)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==my_cParser.Comma:
                self.state = 153
                self.match(my_cParser.Comma)
                self.state = 154
                self.match(my_cParser.Identifier)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 160
            self.match(my_cParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionalOperatesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return my_cParser.RULE_conditionalOperates

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionalOperates" ):
                listener.enterConditionalOperates(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionalOperates" ):
                listener.exitConditionalOperates(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionalOperates" ):
                return visitor.visitConditionalOperates(self)
            else:
                return visitor.visitChildren(self)




    def conditionalOperates(self):
